--- a/src/nju/resource/index.less
+++ b/src/nju/resource/index.less
@@ -1,11 +1,11 @@
 @import "./variables.less";
 @import "./normalize.less";
 
-.nju-application
+.nju-app
 {
     width: 100%;
     height: 100%;
-    
+
     &, *
     {
         box-sizing: border-box;
