--- a/src/nm/resource/index.less
+++ b/src/nm/resource/index.less
@@ -6,3 +6,40 @@ html, body
     width: 100%;
     height: 100%;
 }
+
+.nm-app
+{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    > header
+    {
+        height: @nm-app-header-height;
+        background-color: @nm-app-color;
+    }
+
+    > main
+    {
+        flex: 1;
+        display: flex;
+        align-items: stretch;
+
+        > aside
+        {
+            width: @nm-app-sidebar-width;
+            border-right: 1px solid @nm-separator-color;
+        }
+
+        > section.content
+        {
+            flex: 1;
+        }
+    }
+
+    > footer
+    {
+        height: @nm-app-footer-height;
+        border-top: 1px solid @nm-separator-color;
+    }
+}
