--- a/src/nju/resource/index.less
+++ b/src/nju/resource/index.less
@@ -18,6 +18,11 @@
         font-size: @font-size-base;
     }
 
+    h1, h2, h3
+    {
+        margin: 0;
+    }
+
     h1, .h1
     {
         font-size: @font-size-h1;
