--- a/src/nju/resource/index.less
+++ b/src/nju/resource/index.less
@@ -5,6 +5,8 @@
 {
     width: 100%;
     height: 100%;
+    font-family: @font-family;
+    font-size: @font-size-base;
 
     &, *
     {
@@ -12,15 +14,10 @@
         outline: none;
     }
 
-    html
-    {
-        font-family: @font-family;
-        font-size: @font-size-base;
-    }
-
     h1, h2, h3
     {
         margin: 0;
+        line-height: 1;
     }
 
     h1, .h1
