Create ListView, and so on.

--- a/src/nm/resource/app.less
+++ b/src/nm/resource/app.less
@@ -12,6 +12,7 @@ html, body
     > header, > footer, > main, > .content, > main > .sidebar
     {
         position: relative;
+        flex-shrink: 0;
     }
 
     > header
@@ -32,6 +33,7 @@ html, body
     {
         display: flex;
         flex-grow: 1;
+        flex-shrink: 1;
 
         > aside
         {
