--- a/src/nm/resource/play-list-view.less
+++ b/src/nm/resource/play-list-view.less
@@ -1,4 +1,11 @@
 .nm-play-list-view
 {
-    background: red;
+    line-height: @nm-list-item-height;
+    padding-left: 32px;
+    padding-right: 8px;
+
+    li
+    {
+        text-overflow: ellipsis;
+    }
 }
