--- a/src/nju/resource/list-view.less
+++ b/src/nju/resource/list-view.less
@@ -14,3 +14,11 @@
         overflow-x: hidden;
     }
 }
+
+.nju-list-view.striped
+{
+    li:nth-child(2n+1)
+    {
+        background: @nju-striped-color;
+    }
+}
