--- a/src/nm/resource/app.less
+++ b/src/nm/resource/app.less
@@ -32,7 +32,7 @@ html, body
     > main
     {
         display: flex;
-        flex-grow: 1;
+        flex: 1;
         flex-shrink: 1;
 
         > aside
@@ -45,7 +45,7 @@ html, body
 
         > section.content
         {
-            flex-grow: 1;
+            flex: 1;
             overflow-y: auto;
         }
     }
