--- a/src/nm/resource/track-table-view.less
+++ b/src/nm/resource/track-table-view.less
@@ -1,5 +1,49 @@
 .nm-track-table-view
 {
     table-layout: fixed;
-    border-collapse: collapse;     
+    border-collapse: collapse;
+    width: 100%;
+
+    tr
+    {
+        height: @nm-list-item-height;
+        align-items: center;
+
+        td
+        {
+            padding-left: 8px;
+            padding-right: 8px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
+    thead
+    {
+        tr
+        {
+            border-bottom: 1px solid @nm-separator-color;
+
+            .artists
+            {
+                width: 320px;
+            }
+
+            .album
+            {
+                width: 200px;
+            }
+
+            .play-time
+            {
+                width: 80px;
+            }
+        }
+
+        td:not(:first-child)
+        {
+            border-left: 1px solid @nm-separator-color;
+        }
+    }
 }
