--- a/src/nju/resource/theme-variables.less
+++ b/src/nju/resource/theme-variables.less
@@ -3,4 +3,6 @@
 @body-bg: white;
 @text-color: @gray-dark;
 
+@nju-selection-bg: #0d6eeb;
+@nju-selection-color: white;
 @nju-striped-color: #f3f3f3;
