--- a/src/nm/resource/player-view.less
+++ b/src/nm/resource/player-view.less
@@ -1,4 +1,13 @@
-.player-view
+.nm-player-view
 {
-    background: blue;
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+    align-items: center;
+
+    .track-name
+    {
+        padding-left: 30px;
+    }
 }
