--- a/src/nm/resource/play-list-view.less
+++ b/src/nm/resource/play-list-view.less
@@ -7,5 +7,10 @@
         text-overflow: ellipsis;
         padding-left: 32px;
         padding-right: 8px;
+
+        .icon
+        {
+            margin-right: 12px;
+        }
     }
 }
