--- a/src/nm/resource/app.less
+++ b/src/nm/resource/app.less
@@ -23,6 +23,11 @@ html, body
         color: white;
         background: @nm-app-color;
 
+        #search-view
+        {
+            margin-left: 130px;
+        }
+
         > h1
         {
             margin-left: 20px;
