--- a/src/nm/resource/search-view.less
+++ b/src/nm/resource/search-view.less
@@ -1,4 +1,20 @@
 .nm-search-view
 {
-    
+    background: white;
+    border-radius: 12px;
+
+    input[type=search]
+    {
+        width: 240px;
+        height: 24px;
+        background: transparent;
+        border: none;
+    }
+
+    .icon
+    {
+        color: gray;
+        margin-left: 4px;
+        margin-right: 4px;
+    }
 }
