Add hideSelection css class.

--- a/src/nju/resource/list-view.less
+++ b/src/nju/resource/list-view.less
@@ -29,3 +29,12 @@
         background: @nju-striped-color;
     }
 }
+
+.nju-list-view.hideSelection
+{
+    li.selected
+    {
+        color: unset;
+        background: unset;
+    }
+}
