--- a/src/nju/resource/table-view.less
+++ b/src/nju/resource/table-view.less
@@ -22,3 +22,12 @@
         background: @nju-striped-color;
     }
 }
+
+.nju-table-view.hideSelection
+{
+    tr.selected
+    {
+        color: unset;
+        background: unset;
+    }
+}
